Fix build failure